--- a/index.html
+++ b/index.html
@@ -3,19 +3,54 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Welcome to MOSH!</title>
+    <title>Welcome to MOSH.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <style type="text/css">
+      @font-face {
+        font-family: Arsenal-Bold;
+        src: url('assets/fonts/Arsenal-Bold.otf');
+      }
+
+      .container {
+        width: 1024px;
+        background-color: #fff;
+      }
+
+      .header {
+        height:95px;
+      }
+
+      .header-logo {
+        top: 10px;
+        margin-left: 94px;
+        position: absolute;
+      }
+
+      .tag-line {
+        margin-top: 10px;
+        margin-left: 359px;
+        border-left: 7px solid #42d3ff;
+        height: 67px;
+        color: #42d3ff;
+        padding-left: 30px;
+        font-family: Arsenal-Bold;
+        font-size: 30px;
+        width: 545px;
+        line-height: 26px;
+        padding-top: 18px;
+      }
+
+      .login-button-fan {
+        float: left;
+        margin-right: 1px;
       }
     </style>
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -25,31 +60,34 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Project name</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+    <div class="container">
+      <div class="header">
+        <div class="header-logo">
+          <img class="logo" src="assets/img/header-logo.png" width="216"
+            height="86" alt="MOSH" />
+        </div>
+        <div class="tag-line">
+          Welcome to MOSH. Where you can get up close with the Artists and
+          Brands you love.
         </div>
       </div>
-    </div>
-
-    <div class="container">
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
+      <div class="mosh-carousel">
+        <img src="assets/img/temp-carousel.jpg" width="1024" height="332" />
+      </div>
+      <div class="login-buttons">
+        <a href="#">
+          <img class="login-button-fan" src="assets/img/login-button-fan.png" width="522" height="48" />
+        </a>
+        <a href="#">
+          <img src="assets/img/login-button-artist-brand.png" width="501" height="48" />
+        </a>
+      </div>
+      <div class="mosh-nav">
+        <img src="assets/img/temp-nav.png" width="1024" height="254">
+      </div>
+      <div class="footer">
+        <img src="assets/img/temp-footer.jpg" width="1024" height="166">
+      </div>
     </div> <!-- /container -->
 
     <!-- Le javascript
