--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
         float: left;
         margin-right: 1px;
       }
+
+      .carousel-control {
+        background: none;
+        border: none;
+        margin-top: 0;
+      }
+
+      .carousel-indicators {
+        position: absolute;
+        top: 300px;
+        left: 465px;
+      }
+
+      .carousel-indicators li {
+        margin-right:5px;
+        background-color: rgba(255, 255, 255, 0.60);
+      }
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -71,9 +88,42 @@
           Brands you love.
         </div>
       </div>
-      <div class="mosh-carousel">
-        <img src="assets/img/temp-carousel.jpg" width="1024" height="332" />
-      </div>
+      <div id="carousel" class="carousel slide mosh-carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel" data-slide-to="1"></li>
+          <li data-target="#carousel" data-slide-to="2"></li>
+          <li data-target="#carousel" data-slide-to="3"></li>
+          <li data-target="#carousel" data-slide-to="4"></li>
+          <li data-target="#carousel" data-slide-to="5"></li>
+        </ol>
+        <!-- Carousel items -->
+        <div class="carousel-inner">
+          <div class="active item">
+            <img src="assets/img/carousel-slide-1.jpg" width="1024" height="332" />
+          </div>
+          <div class="item">
+            <img src="assets/img/carousel-slide-2.jpg" width="1024" height="332" />
+          </div>
+          <div class="item">
+            <img src="assets/img/carousel-slide-3.jpg" width="1024" height="332" />
+          </div>
+          <div class="item">
+            <img src="assets/img/carousel-slide-4.jpg" width="1024" height="332" />
+          </div>
+          <div class="item">
+            <img src="assets/img/carousel-slide-5.jpg" width="1024" height="332" />
+          </div>
+          <div class="item">
+            <img src="assets/img/carousel-slide-6.jpg" width="1024" height="332" />
+          </div>
+        </div>
+        <!-- Carousel nav -->
+        <a class="carousel-control left" href="#carousel" data-slide="prev">
+          <img src="assets/img/prev.png"></a>
+        <a class="carousel-control right" href="#carousel" data-slide="next">
+          <img src="assets/img/next.png"></a>
+      </div> <!-- /.mosh-carousel -->
       <div class="login-buttons">
         <a href="#">
           <img class="login-button-fan" src="assets/img/login-button-fan.png" width="522" height="48" />
@@ -94,7 +144,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <!-- <script src="assets/js/bootstrap-transition.js"></script>
+    <script src="assets/js/bootstrap-transition.js"></script>
+    <script src="assets/js/bootstrap-carousel.js"></script>
+    <!--
     <script src="assets/js/bootstrap-alert.js"></script>
     <script src="assets/js/bootstrap-modal.js"></script>
     <script src="assets/js/bootstrap-dropdown.js"></script>
@@ -104,7 +156,14 @@
     <script src="assets/js/bootstrap-popover.js"></script>
     <script src="assets/js/bootstrap-button.js"></script>
     <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
     <script src="assets/js/bootstrap-typeahead.js"></script> -->
+
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('#carousel').carousel({
+          interval: 3000
+        });
+      });
+    </script>
   </body>
 </html>
