fix carousel margin, fix header text css

--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
         margin-top: 10px;
         margin-left: 359px;
         border-left: 7px solid #42d3ff;
-        height: 67px;
+        height: 85px;
+        width: 575px;
+      }
+
+      .tag-line p {
         color: #42d3ff;
         padding-left: 30px;
+        padding-top: 18px;
+        line-height: 26px;
         font-family: Arsenal-Bold;
         font-size: 30px;
-        width: 545px;
-        line-height: 26px;
-        padding-top: 18px;
       }
 
       .login-button-fan {
         float: left;
         margin-right: 1px;
+      }
+
+      .carousel {
+        margin-bottom: 0;
       }
 
       .carousel-control {
@@ -84,8 +91,8 @@
             height="86" alt="MOSH" />
         </div>
         <div class="tag-line">
-          Welcome to MOSH. Where you can get up close with the Artists and
-          Brands you love.
+          <p>Welcome to MOSH. Where you can get up close with the Artists and
+            Brands you love.</p>
         </div>
       </div>
       <div id="carousel" class="carousel slide mosh-carousel">
