disable caching html/php

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- todo: remove/disable this on production -->
+    <!-- begin disable caching -->
+    <?php
+      header("Expires: Tue, 01 Jan 2000 00:00:00 GMT");
+      header("Last-Modified: " . gmdate("D, d M Y H:i:s") . " GMT");
+      header("Cache-Control: no-store, no-cache, must-revalidate, max-age=0");
+      header("Cache-Control: post-check=0, pre-check=0", false);
+      header("Pragma: no-cache");
+    ?>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <!-- end disable caching -->
+
     <meta charset="utf-8">
     <title>Welcome to MOSH.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
