--- a/index.html
+++ b/index.html
@@ -25,70 +25,7 @@
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <style type="text/css">
-      @font-face {
-        font-family: Arsenal-Bold;
-        src: url('assets/fonts/Arsenal-Bold.otf');
-      }
-
-      .container {
-        width: 1024px;
-        background-color: #fff;
-      }
-
-      .header {
-        height:95px;
-      }
-
-      .header-logo {
-        top: 10px;
-        margin-left: 94px;
-        position: absolute;
-      }
-
-      .tag-line {
-        margin-top: 10px;
-        margin-left: 359px;
-        border-left: 7px solid #42d3ff;
-        height: 85px;
-        width: 575px;
-      }
-
-      .tag-line p {
-        color: #42d3ff;
-        padding-left: 30px;
-        padding-top: 18px;
-        line-height: 26px;
-        font-family: Arsenal-Bold;
-        font-size: 30px;
-      }
-
-      .login-button-fan {
-        float: left;
-        margin-right: 1px;
-      }
-
-      .carousel {
-        margin-bottom: 0;
-      }
-
-      .carousel-control {
-        background: none;
-        border: none;
-        margin-top: 0;
-      }
-
-      .carousel-indicators {
-        position: absolute;
-        top: 300px;
-        left: 465px;
-      }
-
-      .carousel-indicators li {
-        margin-right:5px;
-        background-color: rgba(255, 255, 255, 0.60);
-      }
-    </style>
+    <link href="assets/css/mosh.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -109,7 +46,7 @@
             Brands you love.</p>
         </div>
       </div>
-      <div id="carousel" class="carousel slide mosh-carousel">
+      <div id="carousel" class="carousel carousel-fade slide mosh-carousel">
         <ol class="carousel-indicators">
           <li data-target="#carousel" data-slide-to="0" class="active"></li>
           <li data-target="#carousel" data-slide-to="1"></li>
@@ -121,22 +58,28 @@
         <!-- Carousel items -->
         <div class="carousel-inner">
           <div class="active item">
-            <img src="assets/img/carousel-slide-1.jpg" width="1024" height="332" />
+            <img src="assets/img/carousel-slide-1.jpg" width="1024"
+              height="332" />
           </div>
           <div class="item">
-            <img src="assets/img/carousel-slide-2.jpg" width="1024" height="332" />
+            <img src="assets/img/carousel-slide-2.jpg" width="1024"
+              height="332" />
           </div>
           <div class="item">
-            <img src="assets/img/carousel-slide-3.jpg" width="1024" height="332" />
+            <img src="assets/img/carousel-slide-3.jpg" width="1024"
+              height="332" />
           </div>
           <div class="item">
-            <img src="assets/img/carousel-slide-4.jpg" width="1024" height="332" />
+            <img src="assets/img/carousel-slide-4.jpg" width="1024"
+              height="332" />
           </div>
           <div class="item">
-            <img src="assets/img/carousel-slide-5.jpg" width="1024" height="332" />
+            <img src="assets/img/carousel-slide-5.jpg" width="1024"
+              height="332" />
           </div>
           <div class="item">
-            <img src="assets/img/carousel-slide-6.jpg" width="1024" height="332" />
+            <img src="assets/img/carousel-slide-6.jpg" width="1024"
+              height="332" />
           </div>
         </div>
         <!-- Carousel nav -->
@@ -147,14 +90,43 @@
       </div> <!-- /.mosh-carousel -->
       <div class="login-buttons">
         <a href="#">
-          <img class="login-button-fan" src="assets/img/login-button-fan.png" width="522" height="48" />
+          <img class="login-button-fan" src="assets/img/login-button-fan.png"
+          width="522" height="48" />
         </a>
         <a href="#">
-          <img src="assets/img/login-button-artist-brand.png" width="501" height="48" />
+          <img src="assets/img/login-button-artist-brand.png" width="501"
+            height="48" />
         </a>
       </div>
-      <div class="mosh-nav">
-        <img src="assets/img/temp-nav.png" width="1024" height="254">
+      <div class="mid-containers">
+        <div class="mid-box-container left">
+          <p class="main-text">Which other<br/>
+          Artists &amp; Brands<br/>
+          would you like<br/>
+          to see on MOSH.?</p>
+          <p class="sub-text">Share your suggestions<br/>
+          and you could win an iPad 4</p>
+        </div>
+        <div class="mid-box-container center">
+          <p class="main-text">Whose<br/>
+          Hot on<br/>
+          MOSH.?</p>
+        </div>
+        <div class="mid-box-container right">
+          <p class="main-text">Download<br/>
+          MOSH. App to<br/>
+          stay connected.</p>
+          <div class="icons-store">
+            <a href="#">
+              <img class="store-icon" src="assets/img/icon-app-store.png"
+              alt="App Store" width="125" height="37" border="0" />
+            </a>
+            <a href="#">
+              <img class="store-icon" src="assets/img/icon-google-play.png"
+                alt="Google Play" width="125" height="37" border="0" />
+            </a>
+          </div>
+        </div>
       </div>
       <div class="footer">
         <img src="assets/img/temp-footer.jpg" width="1024" height="166">
