--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="header">
         <div class="header-logo">
-          <img class="logo" src="assets/img/header-logo.png" width="216"
+          <img class="logo" src="assets/img/logo-header.png" width="216"
             height="86" alt="MOSH" />
         </div>
         <div class="tag-line">
@@ -129,7 +129,34 @@
         </div>
       </div>
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" width="1024" height="166">
+        <img src="assets/img/temp-footer.jpg" />
+        <!--
+        <ul class="footer-links">
+          <li>About MOSH.</li>
+          <li>MOSH. News</li>
+          <li>Contact MOSH.</li>
+        </ul>
+
+        <img class="logo-footer" src="assets/img/logo-footer.png" width="100"
+          height="40" alt="MOSH." />
+        <div class="copyright">&copy; 2013 MOSH. All Rights Reserved</div>
+
+        <div class="follow-mosh">Follow MOSH. on</div>
+        <div class="follow-icons">
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-facebook.jpg"
+            width="34" height="34" alt="Facebook" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-twitter.jpg"
+              width="34" height="34" alt="Twitter" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-instagram.jpg"
+              width="34" height="34" alt="Instagram" border="0">
+          </a>
+        </div>
+        -->
       </div>
     </div> <!-- /container -->
 
