convert login buttons to html

--- a/index.html
+++ b/index.html
@@ -89,13 +89,11 @@
           <img src="assets/img/next.png"></a>
       </div> <!-- /.mosh-carousel -->
       <div class="login-buttons">
-        <a href="#">
-          <img class="login-button-fan" src="assets/img/login-button-fan.png"
-          width="522" height="48" />
+        <a class="login-button fan" href="#">
+          Are you a Fan?
         </a>
-        <a href="#">
-          <img src="assets/img/login-button-artist-brand.png" width="501"
-            height="48" />
+        <a class="login-button artist-brand" href="#">
+          Are you an Artist or Brand?
         </a>
       </div>
       <div class="mid-containers">
