started artist brand login buttons added

--- a/alec_artist_scorecard.html
+++ b/alec_artist_scorecard.html
@@ -47,7 +47,7 @@
 			
         <div class="mid-containers">
 					<div class="tag-line-scorecard">
-          <p>MOSH ADMIN DAILY SCORECARD</p>
+          <p>ARTIST OR BRAND DAILY SCORECARD</p>
 					</div>
 					<div class="mid-box-table left" >
 						<table class="table1" width="575"><!-- Place to css -->
@@ -297,19 +297,24 @@
       </div>
 			
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
-        <!--
+
         <ul class="footer-links">
-          <li>About MOSH.</li>
-          <li>MOSH. News</li>
-          <li>Contact MOSH.</li>
+          <li><a href="">About MOSH.</a></li>
+          <li><a href="">MOSH. News</a></li>
+          <li><a href="">Contact MOSH.</a></li>
         </ul>
+
+        <div class="divider">
+          <hr/>
+        </div>
+
 
         <img class="logo-footer" src="assets/img/logo-footer.png" width="100"
           height="40" alt="MOSH." />
         <div class="copyright">&copy; 2013 MOSH. All Rights Reserved</div>
 
-        <div class="follow-mosh">Follow MOSH. on</div>
+        <br/>
+
         <div class="follow-icons">
           <a href="#">
             <img class="follow-icon" src="assets/img/icon-facebook.jpg"
@@ -324,7 +329,8 @@
               width="34" height="34" alt="Instagram" border="0">
           </a>
         </div>
-        -->
+        <div class="follow-mosh">Follow MOSH. on</div>
+
       </div>
     </div> <!-- /container -->
 
