--- a/artist-brand-login-register.html
+++ b/artist-brand-login-register.html
@@ -42,8 +42,11 @@
             url('assets/img/temp-bg-artist-or-brand-log-in.jpg'); ">
 
           <p align="center">
-            <img src="assets/img/temp-modal-login-artist-brand-register.png"
-            width="617" height="367" style="margin-top:207px;" />
+          <img src="assets/img/temp-modal-login-artist-brand-register.png"
+            width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+          <map name="Map">
+            <area shape="rect" coords="38,278,307,327" href="artist-brand-login.html">
+          </map>
           </p>
 
       </div>
