--- a/fan-login-welcome.html
+++ b/fan-login-welcome.html
@@ -42,8 +42,12 @@
             url('assets/img/temp-bg-artist-or-brand-log-in.jpg'); ">
 
           <p align="center">
-            <img src="assets/img/temp-modal-login-fan-welcome.png"
-            width="617" height="367" style="margin-top:207px;" />
+          <img src="assets/img/temp-modal-login-fan-welcome.png"
+            width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+          <map name="Map">
+            <area shape="rect" coords="314,279,581,326" href="fan-login-register.html">
+            <area shape="rect" coords="40,280,305,326" href="fan-login.html">
+          </map>
           </p>
 
       </div>
