--- a/fan-login-register.html
+++ b/fan-login-register.html
@@ -43,7 +43,10 @@
 
           <p align="center">
             <img src="assets/img/temp-modal-login-fan-register.png"
-            width="617" height="521" style="margin-top:128px;" />
+            width="617" height="521" border="0" usemap="#Map" style="margin-top:128px;" />
+            <map name="Map">
+              <area shape="rect" coords="498,478,588,492" href="fan-login.html">
+            </map>
           </p>
 
       </div>
