temp fix footer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
       </div>
       <div class="footer">
 
-        <ul class="footer-links">
+        <img src="assets/img/temp-footer.jpg" />
+
+        <!-- <ul class="footer-links">
           <li><a href="">About MOSH.</a></li>
           <li><a href="">MOSH. News</a></li>
           <li><a href="">Contact MOSH.</a></li>
@@ -159,7 +161,7 @@
               width="34" height="34" alt="Instagram" border="0">
           </a>
         </div>
-        <div class="follow-mosh">Follow MOSH. on</div>
+        <div class="follow-mosh">Follow MOSH. on</div> -->
 
       </div>
     </div> <!-- /container -->
