--- a/artist-brand-login-findout.html
+++ b/artist-brand-login-findout.html
@@ -42,8 +42,11 @@
             url('assets/img/temp-bg-artist-or-brand-log-in.jpg'); ">
 
           <p align="center">
-            <img src="assets/img/temp-modal-findout-artist-brand.png"
-            width="617" height="367" style="margin-top:207px;" />
+          <img src="assets/img/temp-modal-findout-artist-brand.png"
+            width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+          <map name="Map">
+            <area shape="rect" coords="198,90,422,178" href="index.html">
+          </map>
           </p>
 
       </div>
