--- a/artist-brand-login.html
+++ b/artist-brand-login.html
@@ -43,7 +43,10 @@
 
           <p align="center">
             <img src="assets/img/temp-modal-login-artist-brand.png"
-            width="617" height="367" style="margin-top:207px;" />
+            width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+            <map name="Map">
+              <area shape="rect" coords="197,37,422,126" href="index.html">
+            </map>
           </p>
 
       </div>
