--- a/fan-login-register.html
+++ b/fan-login-register.html
@@ -46,6 +46,7 @@
             width="617" height="521" border="0" usemap="#Map" style="margin-top:128px;" />
             <map name="Map">
               <area shape="rect" coords="498,478,588,492" href="fan-login.html">
+              <area shape="rect" coords="196,25,422,113" href="index.html">
             </map>
           </p>
 
