--- a/fan-login-welcome.html
+++ b/fan-login-welcome.html
@@ -47,6 +47,7 @@
           <map name="Map">
             <area shape="rect" coords="314,279,581,326" href="fan-login-register.html">
             <area shape="rect" coords="40,280,305,326" href="fan-login.html">
+            <area shape="rect" coords="197,39,423,125" href="index.html">
           </map>
           </p>
 
