--- a/fan-login.html
+++ b/fan-login.html
@@ -43,7 +43,11 @@
 
           <p align="center">
             <img src="assets/img/temp-modal-login-fan.png"
-            width="617" height="367" style="margin-top:207px;" />
+            width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+            <map name="Map">
+              <area shape="rect" coords="197,38,422,127" href="index.html">
+              <area shape="rect" coords="305,294,448,325" href="my-pit-categories.html">
+            </map>
           </p>
 
       </div>
