--- a/my-pit-music-artists.html
+++ b/my-pit-music-artists.html
@@ -36,10 +36,19 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo-noshadow.png" />
-      <img src="assets/img/temp-music-artists.png" />
+      <img src="assets/img/temp-header-internal-logo-noshadow.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="27,11,246,96" href="index.html">
+      </map>
+      <img src="assets/img/temp-music-artists.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="148,412,497,470" href="my-pit-movie-stars.html">
+      </map>
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+      <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+      <map name="Map2">
+        <area shape="rect" coords="27,82,130,124" href="index.html">
+      </map>
       </div>
     </div> <!-- /container -->
 
