--- a/my-pit-select-tv-shows.html
+++ b/my-pit-select-tv-shows.html
@@ -36,10 +36,19 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo-noshadow.png" />
-      <img src="assets/img/temp-select-tv-shows.png" />
+      <img src="assets/img/temp-header-internal-logo-noshadow.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="26,10,247,97" href="index.html">
+      </map>
+      <img src="assets/img/temp-select-tv-shows.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="149,412,496,470" href="my-pit-select-brands.html">
+      </map>
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+        <map name="Map2">
+          <area shape="rect" coords="28,83,131,123" href="index.html">
+        </map>
       </div>
     </div> <!-- /container -->
 
