--- a/artist-brand-login-register.html
+++ b/artist-brand-login-register.html
@@ -46,6 +46,8 @@
             width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
           <map name="Map">
             <area shape="rect" coords="38,278,307,327" href="artist-brand-login.html">
+            <area shape="rect" coords="197,37,422,127" href="index.html">
+            <area shape="rect" coords="315,281,582,325" href="artist-brand-login-findout.html">
           </map>
           </p>
 
