--- a/artist-scorecard.html
+++ b/artist-scorecard.html
@@ -36,10 +36,16 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo.png" />
+      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="31,10,253,97" href="index.html">
+      </map>
       <img src="assets/img/temp-scorecard-content.png" />
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+      <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+      <map name="Map2">
+        <area shape="rect" coords="28,83,132,124" href="index.html">
+      </map>
       </div>
     </div> <!-- /container -->
 
