--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
           <img src="assets/img/next.png"></a>
       </div> <!-- /.mosh-carousel -->
       <div class="login-buttons">
-        <a class="login-button fan" href="#">
+        <a class="login-button fan" href="fan-login-welcome.html">
           Are you a Fan?
         </a>
-        <a class="login-button artist-brand" href="#">
+        <a class="login-button artist-brand" href="artist-brand-login-register.html">
           Are you an Artist or Brand?
         </a>
       </div>
