--- a/my-pit-fan.html
+++ b/my-pit-fan.html
@@ -36,10 +36,16 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo-noshadow.png" />
+      <img src="assets/img/temp-header-internal-logo-noshadow.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="26,10,246,96" href="index.html">
+      </map>
       <img src="assets/img/temp-pit-fan-content.png" />
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+        <map name="Map2">
+          <area shape="rect" coords="28,81,129,124" href="#">
+        </map>
       </div>
     </div> <!-- /container -->
 
