--- a/my-pit-select-celebreties.html
+++ b/my-pit-select-celebreties.html
@@ -36,12 +36,21 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo-noshadow.png" />
-      <img src="assets/img/temp-select-celebreties.png" />
+      <img src="assets/img/temp-header-internal-logo-noshadow.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="26,10,247,97" href="index.html">
+      </map>
+      <img src="assets/img/temp-select-celebreties.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="149,411,496,469" href="my-pit-select-tv-shows.html">
+      </map>
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+        <map name="Map2">
+          <area shape="rect" coords="27,82,132,124" href="index.html">
+        </map>
       </div>
-    </div> <!-- /container -->
+  </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
