--- a/my-pit-sports-stars.html
+++ b/my-pit-sports-stars.html
@@ -36,10 +36,19 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo-noshadow.png" />
-      <img src="assets/img/temp-sports-stars.png" />
+      <img src="assets/img/temp-header-internal-logo-noshadow.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="28,10,246,97" href="index.html">
+      </map>
+      <img src="assets/img/temp-sports-stars.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="150,413,496,471" href="my-pit-select-celebreties.html">
+      </map>
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+        <map name="Map2">
+          <area shape="rect" coords="28,81,131,124" href="index.html">
+        </map>
       </div>
     </div> <!-- /container -->
 
