--- a/artist-brand-login.html
+++ b/artist-brand-login.html
@@ -46,6 +46,7 @@
             width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
             <map name="Map">
               <area shape="rect" coords="197,37,422,126" href="index.html">
+              <area shape="rect" coords="304,294,450,325" href="artist-home-pitbull_V2.html">
             </map>
           </p>
 
