--- a/artist-home-pitbull.html
+++ b/artist-home-pitbull.html
@@ -39,7 +39,12 @@
       <img src="assets/img/temp-header-internal-logo.png" />
       <img src="assets/img/temp-home-pitbull-content.jpg" />
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map" />
+        <map name="Map">
+          <area shape="rect" coords="35,23,134,44" href="about.html">
+          <area shape="rect" coords="146,24,236,45" href="news.html">
+          <area shape="rect" coords="246,25,363,45" href="contact.html">
+        </map>
       </div>
     </div> <!-- /container -->
 
