--- a/artist-home-pitbull_V2.html
+++ b/artist-home-pitbull_V2.html
@@ -36,20 +36,25 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map" />
-      <map name="Map">
-        <area shape="rect" coords="33,11,252,97" href="index.html">
+      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="34,11,252,96" href="index.html">
       </map>
-      <img src="assets/img/temp-home-pitbull-fav-content.jpg" />
-      <div class="footer">
-        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
-        <map name="Map2">
-          <area shape="rect" coords="27,83,131,125" href="index.html">
-          <area shape="rect" coords="143,23,238,45" href="news.html">
-          <area shape="rect" coords="246,25,355,43" href="contact.html">
-          <area shape="rect" coords="37,22,131,42" href="about.html">
-        </map>
-      </div>
+      <img src="assets/img/temp-home-pitbull-fav-content_V2.jpg" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="28,500,276,557" href="artist-pit-post.html">
+        <area shape="rect" coords="29,565,276,621" href="artist-home-pitbull-fav.html">
+        <area shape="rect" coords="30,627,276,684" href="artist-scorecard.html">
+      </map>
+<div class="footer">
+    <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+    <map name="Map2">
+      <area shape="rect" coords="29,83,132,124" href="index.html">
+      <area shape="rect" coords="33,24,131,46" href="about.html">
+      <area shape="rect" coords="142,23,236,43" href="news.html">
+      <area shape="rect" coords="246,25,356,44" href="contact.html">
+    </map>
+</div>
     </div> <!-- /container -->
 
     <!-- Le javascript
