--- a/artist-pit-post.html
+++ b/artist-pit-post.html
@@ -36,10 +36,19 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo.png" />
+      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="33,11,252,96" href="index.html">
+      </map>
       <img src="assets/img/temp-pit-posts.jpg" />
       <div class="footer">
-        <img src="assets/img/temp-footer.jpg" />
+      <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+      <map name="Map2">
+        <area shape="rect" coords="28,83,130,125" href="index.html">
+        <area shape="rect" coords="34,23,134,49" href="about.html">
+        <area shape="rect" coords="144,24,236,46" href="news.html">
+        <area shape="rect" coords="246,26,358,44" href="contact.html">
+      </map>
       </div>
     </div> <!-- /container -->
 
