--- a/fan-invite-friends.html
+++ b/fan-invite-friends.html
@@ -44,6 +44,10 @@
           <p align="center">
             <img src="assets/img/temp-modal-invite.png"
               width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+            <map name="Map">
+              <area shape="rect" coords="198,37,422,126" href="index.html">
+              <area shape="rect" coords="565,330,599,347" href="my-pit-categories.html">
+            </map>
           </p>
 
       </div>
