--- a/fan-login-register.html
+++ b/fan-login-register.html
@@ -47,6 +47,7 @@
             <map name="Map">
               <area shape="rect" coords="498,478,588,492" href="fan-login.html">
               <area shape="rect" coords="196,25,422,113" href="index.html">
+              <area shape="rect" coords="41,419,323,458" href="fan-invite-friends.html">
             </map>
           </p>
 
