--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 
     <div class="container">
       <div class="header">
-        <div class="header-logo">
-          <img class="logo" src="assets/img/logo-header.png" width="216"
-            height="86" alt="MOSH" />
+        <div class="header-logo"> <a href="index.html"><img class="logo" src="assets/img/logo-header.png" width="216"
+            height="86" alt="MOSH" /></a>
         </div>
         <div class="tag-line">
           <p>Welcome to MOSH. Where you can get up close with the Artists and
@@ -128,7 +127,12 @@
       </div>
       <div class="footer">
 
-        <img src="assets/img/temp-footer.jpg" />
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map" />
+        <map name="Map">
+          <area shape="rect" coords="36,23,132,44" href="about.html">
+          <area shape="rect" coords="146,22,235,42" href="news.html">
+          <area shape="rect" coords="248,26,357,42" href="contact.html">
+        </map>
 
         <!-- <ul class="footer-links">
           <li><a href="">About MOSH.</a></li>
