--- a/my-pit-movie-stars.html
+++ b/my-pit-movie-stars.html
@@ -48,6 +48,9 @@
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
           <area shape="rect" coords="26,82,131,124" href="index.html">
+          <area shape="rect" coords="35,24,132,43" href="about.html">
+          <area shape="rect" coords="141,23,236,43" href="news.html">
+          <area shape="rect" coords="246,22,357,43" href="contact.html">
         </map>
       </div>
     </div> <!-- /container -->
