--- a/my-pit-music-artists.html
+++ b/my-pit-music-artists.html
@@ -48,6 +48,9 @@
       <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
       <map name="Map2">
         <area shape="rect" coords="27,82,130,124" href="index.html">
+        <area shape="rect" coords="35,22,133,41" href="a">
+        <area shape="rect" coords="142,23,235,43" href="news.html">
+        <area shape="rect" coords="245,26,357,44" href="contact.html">
       </map>
       </div>
     </div> <!-- /container -->
