--- a/my-pit-select-brands.html
+++ b/my-pit-select-brands.html
@@ -48,6 +48,9 @@
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
           <area shape="rect" coords="26,82,131,125" href="index.html">
+          <area shape="rect" coords="34,25,135,44" href="about.html">
+          <area shape="rect" coords="145,23,236,44" href="news.html">
+          <area shape="rect" coords="246,25,355,42" href="contact.html">
         </map>
       </div>
     </div> <!-- /container -->
