--- a/my-pit-select-celebreties.html
+++ b/my-pit-select-celebreties.html
@@ -48,6 +48,9 @@
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
           <area shape="rect" coords="27,82,132,124" href="index.html">
+          <area shape="rect" coords="36,23,132,44" href="about.html">
+          <area shape="rect" coords="145,26,236,44" href="n">
+          <area shape="rect" coords="248,24,358,41" href="contact.html">
         </map>
       </div>
   </div> <!-- /container -->
