--- a/my-pit-select-tv-shows.html
+++ b/my-pit-select-tv-shows.html
@@ -48,6 +48,9 @@
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
           <area shape="rect" coords="28,83,131,123" href="index.html">
+          <area shape="rect" coords="34,24,132,43" href="about.html">
+          <area shape="rect" coords="144,26,236,43" href="news.html">
+          <area shape="rect" coords="246,26,358,41" href="contact.html">
         </map>
       </div>
     </div> <!-- /container -->
