--- a/my-pit-sports-stars.html
+++ b/my-pit-sports-stars.html
@@ -48,6 +48,9 @@
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
           <area shape="rect" coords="28,81,131,124" href="index.html">
+          <area shape="rect" coords="36,25,133,43" href="about.html">
+          <area shape="rect" coords="147,26,234,42" href="news.html">
+          <area shape="rect" coords="248,24,355,41" href="contact.html">
         </map>
       </div>
     </div> <!-- /container -->
