--- a/artist-scorecard.html
+++ b/artist-scorecard.html
@@ -45,6 +45,9 @@
       <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
       <map name="Map2">
         <area shape="rect" coords="28,83,132,124" href="index.html">
+        <area shape="rect" coords="37,23,133,48" href="about.html">
+        <area shape="rect" coords="145,23,237,49" href="news.html">
+        <area shape="rect" coords="245,25,353,46" href="contact.html">
       </map>
       </div>
     </div> <!-- /container -->
