--- a/my-pit-categories.html
+++ b/my-pit-categories.html
@@ -54,6 +54,9 @@
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
           <area shape="rect" coords="27,81,132,125" href="index.html">
+          <area shape="rect" coords="37,23,132,43" href="about.html">
+          <area shape="rect" coords="146,24,236,45" href="news.html">
+          <area shape="rect" coords="247,26,355,42" href="contact.html">
         </map>
       </div>
     </div> <!-- /container -->
