--- a/news.html
+++ b/news.html
@@ -38,16 +38,14 @@
     <div class="container">
       <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map" />
       <map name="Map">
-        <area shape="rect" coords="33,11,252,97" href="index.html">
+        <area shape="rect" coords="33,10,252,97" href="index.html">
       </map>
-      <img src="assets/img/temp-home-pitbull-fav-content.jpg" />
+      <img src="assets/img/temp-about-contact-news-bg.jpg" border="0" usemap="#Map3" />
+      
       <div class="footer">
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
-          <area shape="rect" coords="27,83,131,125" href="index.html">
-          <area shape="rect" coords="143,23,238,45" href="news.html">
-          <area shape="rect" coords="246,25,355,43" href="contact.html">
-          <area shape="rect" coords="37,22,131,42" href="about.html">
+          <area shape="rect" coords="27,81,132,125" href="index.html">
         </map>
       </div>
     </div> <!-- /container -->
