--- a/my-pit-fan.html
+++ b/my-pit-fan.html
@@ -42,7 +42,7 @@
       </map>
       <img src="assets/img/temp-pit-fan-content.png" border="0" usemap="#Map3" />
       <map name="Map3">
-        <area shape="rect" coords="27,64,300,112" href="artist-home-pitbull_V2.html">
+        <area shape="rect" coords="27,64,300,112" href="artist-home-pitbull_fan.html">
         <area shape="rect" coords="750,186,870,216" href="artist-pit-post.html">
       </map>
       <div class="footer">
