update pitbull fav and post pages

--- a/artist-pit-post.html
+++ b/artist-pit-post.html
@@ -43,7 +43,7 @@
       <map name="Map">
         <area shape="rect" coords="33,11,252,96" href="index.html">
       </map>
-      <img src="assets/img/temp-pit-posts.jpg" />
+      <img src="assets/img/temp-artist-pit-post-content.png" />
       <div class="footer">
       <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
       <map name="Map2">
