--- a/artist-home-pitbull-fav.html
+++ b/artist-home-pitbull-fav.html
@@ -43,6 +43,7 @@
       <map name="Map">
         <area shape="rect" coords="33,11,252,97" href="index.html">
       </map>
+      <img src="assets/img/temp-pit-fav-buttons.png" />
       <img src="assets/img/temp-home-pitbull-fav-content.jpg" />
       <div class="footer">
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
