added links to my_pit_category

--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
@@ -41,7 +44,7 @@
         <area shape="rect" coords="33,10,252,97" href="index.html">
       </map>
       <img src="assets/img/temp-about-contact-news-bg.jpg" border="0" usemap="#Map3" />
-      
+
       <div class="footer">
         <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
         <map name="Map2">
