--- a/artist-brand-login.html
+++ b/artist-brand-login.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
@@ -46,7 +49,7 @@
             width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
             <map name="Map">
               <area shape="rect" coords="197,37,422,126" href="index.html">
-              <area shape="rect" coords="304,294,450,325" href="artist-home-pitbull_fan.html">
+              <area shape="rect" coords="304,294,450,325" href="artist-home-pitbull_V2.html">
             </map>
           </p>
 
