--- a/artist-home-pitbull_fan.html
+++ b/artist-home-pitbull_fan.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
@@ -36,23 +39,23 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map2" />
-      <map name="Map2">
-        <area shape="rect" coords="33,11,251,96" href="index.html">
+      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map" />
+      <map name="Map">
+        <area shape="rect" coords="33,11,252,96" href="index.html">
       </map>
       <img src="assets/img/temp-home-pitbull-content-v2.jpg" border="0" usemap="#Map3" />
       <map name="Map3">
-        <area shape="rect" coords="29,501,274,559" href="artist-pit-post.html">
-        <area shape="rect" coords="29,564,273,622" href="artist-home-pitbull-fav.html">
+        <area shape="rect" coords="29,503,276,559" href="artist-pit-post.html">
+        <area shape="rect" coords="30,566,274,621" href="artist-home-pitbull-fav.html">
       </map>
       <div class="footer">
-      <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map" />
-      <map name="Map">
-        <area shape="rect" coords="29,83,130,123" href="index.html">
-        <area shape="rect" coords="35,24,131,43" href="about.html">
-        <area shape="rect" coords="144,26,236,42" href="news.html">
-        <area shape="rect" coords="246,25,356,41" href="contact.html">
-      </map>
+        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
+        <map name="Map2">
+          <area shape="rect" coords="28,84,130,125" href="index.html">
+          <area shape="rect" coords="37,24,132,42" href="about.html">
+          <area shape="rect" coords="143,25,236,43" href="news.html">
+          <area shape="rect" coords="247,25,355,43" href="contact.html">
+        </map>
       </div>
     </div> <!-- /container -->
 
