--- a/artist-pit-post.html
+++ b/artist-pit-post.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
@@ -40,7 +43,12 @@
       <map name="Map">
         <area shape="rect" coords="33,11,252,96" href="index.html">
       </map>
-      <img src="assets/img/temp-pit-posts.jpg" />
+      <img src="assets/img/temp-artist-pit-post-content.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="47,633,263,683" href="artist-home-pitbull-fav.html">
+        <area shape="rect" coords="45,578,262,626" href="artist-home-pitbull_fan.html">
+        <area shape="rect" coords="47,522,262,573" href="index.html">
+      </map>
       <div class="footer">
       <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
       <map name="Map2">
