--- a/artist-home-pitbull-fav.html
+++ b/artist-home-pitbull-fav.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
@@ -39,6 +42,12 @@
       <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map" />
       <map name="Map">
         <area shape="rect" coords="33,11,252,97" href="index.html">
+      </map>
+      <img src="assets/img/temp-pit-fav-buttons.png" border="0" usemap="#Map3" />
+      <map name="Map3">
+        <area shape="rect" coords="29,17,183,53" href="index.html">
+        <area shape="rect" coords="186,18,340,53" href="artist-home-pitbull_fan.html">
+        <area shape="rect" coords="344,18,497,53" href="artist-pit-post.html">
       </map>
       <img src="assets/img/temp-home-pitbull-fav-content.jpg" />
       <div class="footer">
