--- a/fan-login.html
+++ b/fan-login.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
@@ -46,7 +49,7 @@
             width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
             <map name="Map">
               <area shape="rect" coords="197,38,422,127" href="index.html">
-              <area shape="rect" coords="305,294,448,325" href="my-pit-categories.html">
+              <area shape="rect" coords="305,294,448,325" href="my-pit-fan.html">
             </map>
           </p>
 
