--- a/my-pit-sports-stars.html
+++ b/my-pit-sports-stars.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
     <!-- todo: remove/disable this on production -->
     <!-- begin disable caching -->
     <?php
