--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="header-logo"> <a href="index.html"><img class="logo" src="assets/img/logo-header.png" width="216"
             height="86" alt="MOSH" /></a>
         </div>
-        <div class="tag-line">
+        <div class="hidden-phone tag-line">
           <p>Welcome to MOSH. Where you can get up close with the Artists and
             Brands you love.</p>
         </div>
@@ -91,12 +91,20 @@
           <img src="assets/img/next.png"></a>
       </div> <!-- /.mosh-carousel -->
       <div class="login-buttons">
-        <a class="login-button fan" href="fan-login-welcome.html">
+        <a href="fan-login-welcome.html">
+          <img src="assets/img/login-button-fan.png"
+            style="float:left; margin-right:1px;" />
+        </a>
+        <a href="artist-brand-login-register.html">
+          <img src="assets/img/login-button-artist-brand.png" />
+        </a>
+        <!-- <a class="login-button fan" href="fan-login-welcome.html">
           Are you a Fan?
         </a>
-        <a class="login-button artist-brand" href="artist-brand-login-register.html">
+        <a class="login-button artist-brand"
+          href="artist-brand-login-register.html">
           Are you an Artist or Brand?
-        </a>
+        </a> -->
       </div>
       <div class="mid-containers">
         <div class="mid-box-container left">
