add link on pitbull home, add admin login page

--- a/admin-login.html
+++ b/admin-login.html
@@ -39,26 +39,20 @@
   <body>
 
     <div class="container">
-      <img src="assets/img/temp-header-internal-logo.png" border="0" usemap="#Map3" />
-      <map name="Map3">
-        <area shape="rect" coords="34,11,252,96" href="index.html">
-      </map>
-      <img src="assets/img/temp-home-pitbull-fav-content_V2.jpg" border="0" usemap="#Map" />
-      <map name="Map">
-        <area shape="rect" coords="28,500,276,557" href="artist-pit-post.html">
-        <area shape="rect" coords="29,565,276,621" href="artist-home-pitbull-fav.html">
-        <area shape="rect" coords="30,627,276,684" href="artist-scorecard.html">
-        <area shape="rect" coords="31,15,274,56" href="my-pit-fan.html" alt="Pitbull">
-      </map>
-<div class="footer">
-    <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
-    <map name="Map2">
-      <area shape="rect" coords="29,83,132,124" href="index.html">
-      <area shape="rect" coords="33,24,131,46" href="about.html">
-      <area shape="rect" coords="142,23,236,43" href="news.html">
-      <area shape="rect" coords="246,25,356,44" href="contact.html">
-    </map>
-</div>
+      <div class="artist-brand-login"
+        style="max-width:1024px; height:758px;
+          background-color:#fff; ">
+
+          <p align="center">
+            <img src="assets/img/temp-modal-admin-login.png"
+            width="617" height="367" border="0" usemap="#Map" style="margin-top:207px;" />
+            <map name="Map">
+              <area shape="rect" coords="197,37,422,126" href="index.html">
+              <area shape="rect" coords="304,294,450,325" href="admin-scorecard.html">
+            </map>
+          </p>
+
+      </div>
     </div> <!-- /container -->
 
     <!-- Le javascript
@@ -80,11 +74,7 @@
     <script src="assets/js/bootstrap-typeahead.js"></script> -->
 
     <script type="text/javascript">
-      $(document).ready(function() {
-        $('#carousel').carousel({
-          interval: 3000
-        });
-      });
+
     </script>
   </body>
 </html>
