updated pit fan links

--- a/artist-home-pitbull_fan.html
+++ b/artist-home-pitbull_fan.html
@@ -40,7 +40,13 @@
 
     <div class="container">
       <img src="assets/img/temp-header-internal-logo.png" />
-      <img src="assets/img/temp-home-pitbull-content-v2.jpg" />
+      <img src="assets/img/temp-home-pitbull-content-v2.jpg" border="0" usemap="#Map"  />
+      <map name="Map">
+        <area shape="rect" coords="28,500,276,557" href="artist-pit-post.html">
+        <area shape="rect" coords="29,565,276,621" href="artist-home-pitbull-fav.html">
+        <area shape="rect" coords="30,627,276,684" href="artist-scorecard.html">
+        <area shape="rect" coords="31,15,274,56" href="my-pit-fan.html" alt="Pitbull">
+      </map>
       <div class="footer">
         <img src="assets/img/temp-footer.jpg" />
       </div>
