fix homepage for table/phone,-changed to image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="header-logo"> <a href="index.html"><img class="logo" src="assets/img/logo-header.png" width="216"
             height="86" alt="MOSH" /></a>
         </div>
-        <div class="hidden-phone tag-line">
+        <div class="hidden-phone hidden-tablet tag-line">
           <p>Welcome to MOSH. Where you can get up close with the Artists and
             Brands you love.</p>
         </div>
@@ -107,7 +107,8 @@
         </a> -->
       </div>
       <div class="mid-containers">
-        <div class="mid-box-container left">
+        <img src="assets/img/temp-nav.png" style="margin-top:-20px;" />
+        <!-- <div class="mid-box-container left">
           <p class="main-text">Which other<br/>
           Artists &amp; Brands<br/>
           would you like<br/>
@@ -134,7 +135,7 @@
                 alt="Google Play" width="125" height="37" border="0" />
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="footer">
 
