--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
         <a class="carousel-control right" href="#carousel" data-slide="next">
           <img src="assets/img/next.png"></a>
       </div> <!-- /.mosh-carousel -->
-      <div class="login-buttons">
+      <div class="login-buttons hidden-desktop">
         <a href="fan-login-welcome.html">
-          <img src="assets/img/login-button-fan.png"
+          <img src="assets/img/temp-login-buttons.png" border="0" /></a>
+      </div>
+      <div class="hidden-phone hidden-tablet login-buttons">
+        <a href="fan-login-welcome.html">
+          <img src="assets/img/login-button-fan.png" border="0"
             style="float:left; margin-right:1px;" />
         </a>
         <a href="artist-brand-login-register.html">
-          <img src="assets/img/login-button-artist-brand.png" />
+          <img src="assets/img/login-button-artist-brand.png" border="0" />
         </a>
         <!-- <a class="login-button fan" href="fan-login-welcome.html">
           Are you a Fan?
