--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         <div class="carousel-inner">
           <div class="active item">
             <img src="assets/img/carousel-slide-1.jpg" width="1024"
-              height="332" />
+              height="332" usemap="#Map2" />
+            <map name="Map2">
+              <area shape="rect" coords="369,237,416,270" href="#">
+            </map>
           </div>
           <div class="item">
             <img src="assets/img/carousel-slide-2.jpg" width="1024"
@@ -90,18 +93,22 @@
         <a class="carousel-control right" href="#carousel" data-slide="next">
           <img src="assets/img/next.png"></a>
       </div> <!-- /.mosh-carousel -->
-      <div class="login-buttons hidden-desktop">
+      <div class="login-buttons">
         <a href="fan-login-welcome.html">
-          <img src="assets/img/temp-login-buttons.png" border="0" /></a>
+          <img src="assets/img/temp-login-buttons.png" usemap="#Map3" border="0" />
+          <map name="Map3">
+            <area shape="rect" coords="523,1,1230,37" href="artist-brand-login-register.html">
+          </map>
+        </a>
       </div>
-      <div class="hidden-phone hidden-tablet login-buttons">
-        <a href="fan-login-welcome.html">
+      <!-- <div class="hidden-phone hidden-tablet login-buttons"> -->
+        <!-- <a href="fan-login-welcome.html">
           <img src="assets/img/login-button-fan.png" border="0"
             style="float:left; margin-right:1px;" />
         </a>
         <a href="artist-brand-login-register.html">
           <img src="assets/img/login-button-artist-brand.png" border="0" />
-        </a>
+        </a> -->
         <!-- <a class="login-button fan" href="fan-login-welcome.html">
           Are you a Fan?
         </a>
@@ -109,7 +116,7 @@
           href="artist-brand-login-register.html">
           Are you an Artist or Brand?
         </a> -->
-      </div>
+      <!-- </div> -->
       <div class="mid-containers">
         <img src="assets/img/temp-nav.png" style="margin-top:-20px;" />
         <!-- <div class="mid-box-container left">
