--- a/artist-home-pitbull_fan.html
+++ b/artist-home-pitbull_fan.html
@@ -112,7 +112,7 @@
         <div class="follow-mosh">Follow MOSH. on</div>
 
       </div>
-    </div> <!- /container -->
+    </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
