--- a/index.html
+++ b/index.html
@@ -141,16 +141,9 @@
           </div>
         </div> -->
       </div>
-      <div class="footer">
+			<div class="footer">
 
-        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map" />
-        <map name="Map">
-          <area shape="rect" coords="36,23,132,44" href="about.html">
-          <area shape="rect" coords="146,22,235,42" href="news.html">
-          <area shape="rect" coords="248,26,357,42" href="contact.html">
-        </map>
-
-        <!-- <ul class="footer-links">
+        <ul class="footer-links">
           <li><a href="">About MOSH.</a></li>
           <li><a href="">MOSH. News</a></li>
           <li><a href="">Contact MOSH.</a></li>
@@ -181,7 +174,7 @@
               width="34" height="34" alt="Instagram" border="0">
           </a>
         </div>
-        <div class="follow-mosh">Follow MOSH. on</div> -->
+        <div class="follow-mosh">Follow MOSH. on</div>
 
       </div>
     </div> <!-- /container -->
