--- a/artist-home-pitbull.html
+++ b/artist-home-pitbull.html
@@ -41,13 +41,41 @@
     <div class="container">
       <img src="assets/img/temp-header-internal-logo.png" />
       <img src="assets/img/temp-home-pitbull-content.jpg" />
-      <div class="footer">
-        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map" />
-        <map name="Map">
-          <area shape="rect" coords="35,23,134,44" href="about.html">
-          <area shape="rect" coords="146,24,236,45" href="news.html">
-          <area shape="rect" coords="246,25,363,45" href="contact.html">
-        </map>
+       <div class="footer">
+
+        <ul class="footer-links">
+          <li><a href="">About MOSH.</a></li>
+          <li><a href="">MOSH. News</a></li>
+          <li><a href="">Contact MOSH.</a></li>
+        </ul>
+
+        <div class="divider">
+          <hr/>
+        </div>
+
+
+        <img class="logo-footer" src="assets/img/logo-footer.png" width="100"
+          height="40" alt="MOSH." />
+        <div class="copyright">&copy; 2013 MOSH. All Rights Reserved</div>
+
+        <br/>
+
+        <div class="follow-icons">
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-facebook.jpg"
+            width="34" height="34" alt="Facebook" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-twitter.jpg"
+              width="34" height="34" alt="Twitter" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-instagram.jpg"
+              width="34" height="34" alt="Instagram" border="0">
+          </a>
+        </div>
+        <div class="follow-mosh">Follow MOSH. on</div>
+
       </div>
     </div> <!-- /container -->
 
