--- a/my-pit-categories.html
+++ b/my-pit-categories.html
@@ -91,14 +91,41 @@
         <area shape="rect" coords="341,2,690,57" href="my-pit-music-artists.html">
       </map>
       
-      <div class="footer">
-        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
-        <map name="Map2">
-          <area shape="rect" coords="27,81,132,125" href="index.html">
-          <area shape="rect" coords="37,23,132,43" href="about.html">
-          <area shape="rect" coords="146,24,236,45" href="news.html">
-          <area shape="rect" coords="247,26,355,42" href="contact.html">
-        </map>
+       <div class="footer">
+
+        <ul class="footer-links">
+          <li><a href="">About MOSH.</a></li>
+          <li><a href="">MOSH. News</a></li>
+          <li><a href="">Contact MOSH.</a></li>
+        </ul>
+
+        <div class="divider">
+          <hr/>
+        </div>
+
+
+        <img class="logo-footer" src="assets/img/logo-footer.png" width="100"
+          height="40" alt="MOSH." />
+        <div class="copyright">&copy; 2013 MOSH. All Rights Reserved</div>
+
+        <br/>
+
+        <div class="follow-icons">
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-facebook.jpg"
+            width="34" height="34" alt="Facebook" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-twitter.jpg"
+              width="34" height="34" alt="Twitter" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-instagram.jpg"
+              width="34" height="34" alt="Instagram" border="0">
+          </a>
+        </div>
+        <div class="follow-mosh">Follow MOSH. on</div>
+
       </div>
     </div> <!-- /container -->
 
