--- a/my-pit-movie-stars.html
+++ b/my-pit-movie-stars.html
@@ -47,14 +47,41 @@
       <map name="Map3">
         <area shape="rect" coords="149,413,497,470" href="my-pit-sports-stars.html">
       </map>
-      <div class="footer">
-        <img src="assets/img/temp-footer.jpg" border="0" usemap="#Map2" />
-        <map name="Map2">
-          <area shape="rect" coords="26,82,131,124" href="index.html">
-          <area shape="rect" coords="35,24,132,43" href="about.html">
-          <area shape="rect" coords="141,23,236,43" href="news.html">
-          <area shape="rect" coords="246,22,357,43" href="contact.html">
-        </map>
+       <div class="footer">
+
+        <ul class="footer-links">
+          <li><a href="">About MOSH.</a></li>
+          <li><a href="">MOSH. News</a></li>
+          <li><a href="">Contact MOSH.</a></li>
+        </ul>
+
+        <div class="divider">
+          <hr/>
+        </div>
+
+
+        <img class="logo-footer" src="assets/img/logo-footer.png" width="100"
+          height="40" alt="MOSH." />
+        <div class="copyright">&copy; 2013 MOSH. All Rights Reserved</div>
+
+        <br/>
+
+        <div class="follow-icons">
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-facebook.jpg"
+            width="34" height="34" alt="Facebook" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-twitter.jpg"
+              width="34" height="34" alt="Twitter" border="0">
+          </a>
+          <a href="#">
+            <img class="follow-icon" src="assets/img/icon-instagram.jpg"
+              width="34" height="34" alt="Instagram" border="0">
+          </a>
+        </div>
+        <div class="follow-mosh">Follow MOSH. on</div>
+
       </div>
     </div> <!-- /container -->
 
