--- a/artist-home-pitbull.html
+++ b/artist-home-pitbull.html
@@ -41,12 +41,14 @@
     <div class="container">
       <img src="assets/img/temp-header-internal-logo.png" />
       <img src="assets/img/temp-home-pitbull-content.jpg" />
-       <div class="footer">
+      
+			
+			<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
