--- a/artist-home-pitbull_V2.html
+++ b/artist-home-pitbull_V2.html
@@ -50,12 +50,13 @@
         <area shape="rect" coords="30,627,276,684" href="artist-scorecard.html">
         <area shape="rect" coords="31,15,274,56" href="my-pit-fan.html" alt="Pitbull">
       </map>
- <div class="footer">
+ 
+			<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
