--- a/artist-home-pitbull-fav.html
+++ b/artist-home-pitbull-fav.html
@@ -54,12 +54,14 @@
       <img src="assets/img/temp-pit-fav-buttons.png" />
 -->
       <img src="assets/img/temp-home-pitbull-fav-content.jpg" />
-      <div class="footer">
+     
+
+<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
