--- a/artist-pit-post.html
+++ b/artist-pit-post.html
@@ -51,14 +51,12 @@
         <area shape="rect" coords="47,522,262,573" href="index.html">
       </map>
 
-      <!-- <img src="assets/img/temp-artist-pit-post-content.png" />
->>>>>>> alectus/master-->
-       <div class="footer">
+   <div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
