--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,13 @@
       </map>
       <img src="assets/img/temp-about-contact-news-bg.jpg" border="0" usemap="#Map3" />
 
-       <div class="footer">
+       
+			<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
