--- a/index.html
+++ b/index.html
@@ -141,12 +141,14 @@
           </div>
         </div> -->
       </div>
+			
+			
 			<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
