--- a/my-pit-fan.html
+++ b/my-pit-fan.html
@@ -48,12 +48,14 @@
         <area shape="rect" coords="27,64,300,112" href="artist-home-pitbull_fan.html">
         <area shape="rect" coords="750,186,870,216" href="artist-pit-post.html">
       </map>
-       <div class="footer">
+      
+			
+			<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
