--- a/my-pit-select-brands.html
+++ b/my-pit-select-brands.html
@@ -47,12 +47,13 @@
       <map name="Map3">
         <area shape="rect" coords="149,412,497,470" href="my-pit-fan.html">
       </map>
-      <div class="footer">
+      
+		<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
