--- a/my-pit-sports-stars.html
+++ b/my-pit-sports-stars.html
@@ -47,12 +47,14 @@
       <map name="Map3">
         <area shape="rect" coords="150,413,496,471" href="my-pit-select-celebreties.html">
       </map>
-       <div class="footer">
+      
+			
+			<div class="footer">
 
         <ul class="footer-links">
-          <li><a href="">About MOSH.</a></li>
-          <li><a href="">MOSH. News</a></li>
-          <li><a href="">Contact MOSH.</a></li>
+          <li><a href="about.html">About MOSH.</a></li>
+          <li><a href="news.html">MOSH. News</a></li>
+          <li><a href="contact.html">Contact MOSH.</a></li>
         </ul>
 
         <div class="divider">
